# Simulator_of_shop_and_library

./: .gitignore  AccessoriesFactory.cpp  AccessoriesFactory.h  Application.cpp  Application.h  Bagpack.cpp  Bagpack.h  BagpackManager.cpp  BagpackManager.h  Bill.cpp  Bill.h  Book.cpp  Book.h  BookManager.cpp  BookManager.h  CMakeLists.txt  ConcreteBag.cpp  ConcreteBag.h  ConcreteBagpack.cpp  ConcreteBagpack.h  ConcreteBook.cpp  ConcreteBook.h  ConcreteNotepad.cpp  ConcreteNotepad.h  ConcreteSchoolSupply.h  Notepad.cpp  Notepad.h  NotepadManager.cpp  NotepadManager.h  README.md  ReadCsvTsv.cpp  ReadCsvTsv.h  SchoolSupplies.cpp  SchoolSupplies.h  SchoolSuppliesManager.cpp  SchoolSuppliesManager.h  ServiceCsvTsv.cpp  ServiceCsvTsv.h  ShopWare.cpp  ShopWare.h  (+9 more)
ConcreteItems/: ConcreteBagpack.cpp  ConcreteBagpack.h  ConcreteBook.h  ConcreteNotepad.h  ConcreteSchoolSupply.cpp  ConcreteSchoolSupply.h
InputOutputOperations/: Inputter.cpp  Inputter.h  Outputter.cpp  Outputter.h
Managers/: BagpackManager.cpp  BagpackManager.h  BookManager.cpp  BookManager.h  NotepadManager.cpp  NotepadManager.h  SchoolSuppliesManager.cpp  SchoolSuppliesManager.h
Tests/: BagpackTests.cpp  BookTests.cpp  LibraryTests.cpp  NotepadTests.cpp  SchoolSuppliesTests.cpp  TowarTests.cpp  WritingReadingCsvTsv.cpp  WritingReadingCsvTsvTests.cpp
lib/: AbsoluteDateTest.cpp  CMakeLists.txt  ConverterTests.cpp
lib/googletest-master/: BUILD.bazel  WORKSPACE
lib/googletest-master/ci/: build-linux-bazel.sh  env-linux.sh  env-osx.sh  get-nprocessors.sh  install-linux.sh  install-osx.sh  log-config.sh
lib/googletest-master/googlemock/: LICENSE
lib/googletest-master/googlemock/docs/: cheat_sheet.md  cook_book.md  for_dummies.md  gmock_faq.md  pump_manual.md
lib/googletest-master/googlemock/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-function-mocker.h  gmock-generated-actions.h  gmock-generated-actions.h.pump  gmock-matchers.h  gmock-more-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h  gmock.h
lib/googletest-master/googlemock/include/gmock/internal/: gmock-internal-utils.h  gmock-port.h
lib/googletest-master/googlemock/include/gmock/internal/custom/: README.md  gmock-generated-actions.h.pump  gmock-matchers.h  gmock-port.h
lib/googletest-master/googlemock/scripts/generator/: LICENSE
lib/googletest-master/googlemock/src/: gmock-all.cc  gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
lib/googletest-master/googlemock/test/: BUILD.bazel
lib/googletest-master/googletest/: README.md
lib/googletest-master/googletest/cmake/: internal_utils.cmake
lib/googletest-master/googletest/docs/: advanced.md  faq.md  primer.md
lib/googletest-master/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h  gtest_prod.h
lib/googletest-master/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port-arch.h  gtest-port.h  gtest-string.h  gtest-type-util.h
lib/googletest-master/googletest/include/gtest/internal/custom/: README.md  gtest-port.h  gtest-printers.h  gtest.h
lib/googletest-master/googletest/scripts/: gtest-config.in
lib/googletest-master/googletest/src/: gtest-all.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-matchers.cc  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
lib/googletest-master/googletest/test/: BUILD.bazel  googletest-output-test-golden-lin.txt
